--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const height = 2150;
   </head>
   <body class="font-mono">
     <div class=`flex flex-col h-[2150px] w-full justify-between `>
-      <Navbar nombre="nombre" />
+      <Navbar nombre="Nombre" />
 
       <div class="flex w-full h-full z-40 mb-30">
         <slot/>
