--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const defaultImages = [
   <div class="flex flex-col h-screen w-full justify-start items-center px-5 mt-32 gap-y-30 mb-10">
 
     <div class="flex w-full justify-center items-center ">
-      <h1>Hola mundo</h1>
+      <h1>Descripción</h1>
     </div>
     <div class="flex w-full justify-center items-center ">
       <Carrousel/>
