--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -23,7 +23,7 @@ const isActive = (path: string) => pathname === path;
         <CoronaLogo />
       </div>
       
-      <h1 class="text-md md:text-2xl font-bold">{nombre}</h1>
+      <h1 class="flex items-center justify-center text-md md:text-2xl font-bold">{nombre}</h1>
       <div class="flex gap-2">
         <TemaBoton />
       </div>
