--- a/src/components/Carrousel.astro
+++ b/src/components/Carrousel.astro
@@ -3,16 +3,21 @@ import { slide } from "astro:transitions";
 
 // Puedes usar un array si las imágenes son dinámicas
 const images = [
-  "https://images.unsplash.com/photo-1519671482749-fd09be7ccebf?w=800&auto=format", // Imágenes en alta resolución
-  "https://images.unsplash.com/photo-1530103862676-de8c9debad1d?w=800&auto=format",
-  "https://images.unsplash.com/photo-1547483238-f400e65ccd56?w=800&auto=format",
+  "/galeria/1.png",
+  "/galeria/2.png",
+  "/galeria/3.png",
+  "/galeria/4.png",
+  "/galeria/5.png",
+  "/galeria/6.png",
+  "/galeria/7.png",
+  "/galeria/8.png",
 ];
 ---
 
 <div class="relative w-full max-w-3xl mx-auto">
   <div
     id="carousel"
-    class="flex overflow-x-hidden snap-x snap-mandatory scroll-auto rounded-md mask-b-from-70% mask-b-to-100% "
+    class="flex overflow-x-hidden snap-x snap-mandatory scroll-auto rounded-md mask-b-from-100% mask-b-to-100%"
   >
     {
       images.map((src, i) => (
@@ -27,7 +32,7 @@ const images = [
   </div>
 
   <!-- Botones tipo barra -->
-  <div
+  <!-- <div
     class="flex justify-center items-center gap-4 mt-5"
     id="carousel-indicators"
   >
@@ -39,7 +44,7 @@ const images = [
         />
       ))
     }
-  </div>
+  </div> -->
 </div>
 
 <script type="module">
@@ -87,7 +92,7 @@ const images = [
   window.addEventListener("DOMContentLoaded", updateActiveIndicator);
 
   setInterval(() => {
-  index = (index + 1) % total;
-  goToSlide(index);
-}, 5000);
+    index = (index + 1) % total;
+    goToSlide(index);
+  }, 5000);
 </script>
