--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -26,11 +26,11 @@ const isActive = (path: string) => pathname === path;
     >
       <div class="flex w-full justify-between items-center">
         <img src="/icono-xv-bg.png" class="w-25 h-20" alt="" />
-        <h1 class="fixed w-full top-7 left-35 right-40 text-4xl titulo">Hillari sofia</h1>
+        <h1 class="fixed w-full top-7 left-33 right-40 text-4xl font-bold titulo">Hillari sofia</h1>
         <div></div>
       </div>
     </nav>
-    <div class="fixed right-3 top-3 gap-2">
+    <div class="fixed right-3 top-6 gap-2">
       <TemaBoton />
     </div>
   </div>
@@ -76,3 +76,4 @@ const isActive = (path: string) => pathname === path;
     }
   });
 </script>
+
