--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const height = 2150;
   </head>
 
   <body class="font-mono">
-    <div class=`flex flex-col h-[2300px] w-full justify-between `>
+    <div class=`flex flex-col h-[3800px] w-full justify-between `>
       <Navbar nombre="Celebración de mis XV años" />
 
       <div class="fixed right-2 top-42 z-50 gap-4">
@@ -74,19 +74,19 @@ alt=media&key=AIzaSyDVMziNb-IQImPRTVxWJEIvZaIi2WWHRW8"
       </div>
 
       <footer
-        class="flex w-full h-auto justify-center items-center py-5 gradient-footer text-black dark:text-[var(--color-text)]"
+        class="flex w-full h-auto justify-center items-center py-5 gradient-footer titulo font-bold text-2xl text-black dark:text-[var(--color-text)]"
       >
-        Te espero en mi fiesta
+        I Love You So Much 🫶🏻
       </footer>
     </div>
 
     <script type="module">
-      const total = 200;
+      const total = 450;
       const body = document.body;
 
       // Tamaño personalizado (puede ser fijo o dinámico)
       const width = window.innerWidth - 30; // px
-      const height = 2160; // px
+      const height = 3700; // px
 
       for (let i = 0; i < total; i++) {
         const star = document.createElement("i");
