cambios en navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,7 +18,7 @@ const isActive = (path: string) => pathname === path;
   <div class="relative flex justify-between items-center w-full">
     <!-- Imagen inicial -->
     <div id="navbarImage" class="flex w-full transition-opacity duration-700 ease-in-out opacity-100">
-      <img src="/portada-2.png" alt="Portada" class="absolute" />
+      <img src="/portada-2.png" alt="Portada" class="absolute w-full" />
     </div>
     <nav
       id="navbarContent"
@@ -26,7 +26,7 @@ const isActive = (path: string) => pathname === path;
     >
       <div class="flex w-full justify-between items-center">
         <img src="/icono-xv-bg.png" class="w-25 h-20" alt="" />
-        <h1 class="fixed w-full top-7 left-33 right-40 text-4xl font-bold titulo">Hillari sofia</h1>
+        <h1 class="fixed w-full top-7 left-32 right-40 text-4xl font-bold titulo">Hillary Sofia</h1>
         <div></div>
       </div>
     </nav>
