--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const height = 2150;
   </head>
 
   <body class="font-mono">
-    <div class=`flex flex-col h-[3800px] w-full justify-between `>
+    <div class=`flex flex-col h-[3800px] lg:h-[4000px] w-full justify-between `>
       <Navbar nombre="Celebración de mis XV años" />
 
       <div class="fixed right-2 top-42 z-50 gap-4">
