--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const defaultImages = ["/galeria/1.png"];
     <div
       class="flex w-full flex-col justify-center items-center bg-[var(--color-secondary)] px-4 py-5 rounded opacity-95 gap-y-5"
     >
-      <p class="titulo text-5xl"><b>Misa ceremonial</b></p>
+      <p class="titulo text-5xl"><b>Ceremonia</b></p>
       <div class="flex flex-col justify-center items-center w-full gap-y-2">
         <p class="flex text-md justify-center text-center">
           La misa se llevará acabo en la
