cambio en boton de asistencia

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const height = 2150;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Invitacion a mis XV</title>
+    <title>Hillary Sofia</title>
 
     <link
       rel="stylesheet"
