--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,7 +141,7 @@ const defaultImages = ["/galeria/1.png"];
     </div>
     <div class="flex flex-col w-full justify-center items-center text-center gap-y-5">
       <p class="text-5xl font-bold text-white titulo">¡Esperamos tu confirmación de asistencia!</p>
-      <a href="https://maps.app.goo.gl/YYAF4oPWo4Q95upq8" type="button" class="flex w-full justify-center rounded py-3 gradient-footer text-[var(--color-text)] text-lg">Ver ubicación</a>
+      <a href="https://api.whatsapp.com/send?phone=528713928139&text=Buen%20d%C3%ADa,%20Confirmo%20mi%20asistencia." type="button" class="flex w-full justify-center rounded py-3 gradient-footer text-[var(--color-text)] text-lg">Confirmar asistencia</a>
     </div>
     <!-- <div class="flex w-full justify-center items-center">
       <Informacion />
